--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -6,11 +6,13 @@
 .heading{
     text-align: center;
     margin: 2rem 0 2rem 0;
+    color: white;
 }
 
 body{
     text-align: center;
-    background-color: antiquewhite ;
+    background-color:darkslategrey ;
+    color: white;
   
 }
 
@@ -27,12 +29,13 @@ body{
 }
 
 .box{
-    background-color: aliceblue;
+    background-color:lightyellow;
     font-size: 50px;
     border-radius: 1rem;
     align-items: center;
     height: 15vh;
     width: 15vh;
+    border: 1rem;
 }
 
 .btn{
@@ -43,8 +46,9 @@ button{
     margin:auto;
     height: 40px;
     width: 100px;
-    background-color: rgb(240, 185, 114);
+    background-color:rgb(162, 230, 205);
     border-radius: 0.5rem;
+    border: 1rem;
 }
 
 .winner{
